manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tan-dara5304-spring-test-zip-https-ingress
  namespace: tan-dara5304-spring-test-zip
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ui.langnet.info
      secretName: tan-dara5304-spring-test-zip-secret-tls
  rules:
    - host: ui.langnet.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tan-dara5304-spring-test-zip-service
                port:
                  number: 8303
